client/src/components/dataset/DatasetTable.scss
@import "../../styles/modules/importAll";

.DatasetTable {
    margin-top: 4rem;

    .toggle-groups {
        display: block;
        width: 50px;
        text-align: center;
        padding-top: 10px;

        span {
            margin: 10px;
            padding: 5px 10px;
            background: #e6e6e6;
            border-radius: 5px;
        }
    }

    .wrapper {
        width: calc(100% - 50px);
        height: calc(100vh - 4rem);
        display: flex;

        &.noSidebar {
            width: 100%;
        }

        &.hasSidebar {
            width: calc(100% - 300px);
        }

        .public_fixedDataTableCell_main {
            max-width: 200px;
            white-space: nowrap;
            overflow: hidden;
        }

        .public_fixedDataTable_header .public_fixedDataTableCell_main {
            background-image:  #efefef;
        }
    }

    .sidebarWrapper {
        &.collapsed {
            width: 0;
        }

        &.expanded {
            width: 300px;
        }
    }

    .sidebarTargetingColumn {
        background-color: $lightGrey;
    }

    .ColumnHeader {
        position: relative;
    }
}

